// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration works with redux 1`] = `
Array [
  Object {
    "comments": Object {
      "loading": true,
    },
  },
  Object {
    "payload": "hello world",
    "type": "@COMMENT/POST_REQUESTED",
  },
]
`;

exports[`Integration works with redux 2`] = `
Array [
  Object {
    "comments": Object {
      "data": Array [
        Object {
          "id": "111-111-111-111",
        },
      ],
      "loading": true,
    },
  },
  Object {
    "payload": Array [
      Object {
        "id": "111-111-111-111",
      },
    ],
    "type": "@COMMENT/POST_SUCCEEDED",
  },
]
`;

exports[`Integration works with redux 3`] = `
Array [
  Object {
    "comments": Object {
      "data": Array [
        Object {
          "id": "111-111-111-111",
        },
      ],
      "loading": false,
    },
  },
  Object {
    "type": "@COMMENT/POST_DONE",
  },
]
`;
